# MFL-Prop-Bets

./: .gitignore  README.md  league_authorization.py  league_info.json  mfl-service-acct.json  mfl_props_v2.py  oauth.json  pyproject.toml
.hooks/: pre-commit
mfl_env/: pyvenv.cfg
mfl_prop_bets/: league_authorization.py  mfl_props.py  models.py  prop_winners.py  pyproject.toml  settings.py
mfl_prop_bets/clients/: oauth_client.py  sheets_client.py  yahoo_client.py
