[tool.poetry]
name = "mfl-prop-bets"
version = "0.1.0"
description = "Yahoo Fantasy Football prop bet calculator with Google Sheets integration"
authors = ["Mevin Mathew"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^6.0.0"
google-auth = "^2.0.0"
pydantic = "^2.0.0"
httpx = "^0.25.0"
isort = "^6.0.1"
pylint = "^3.3.8"
black = "^25.1.0"
mypy = "^1.17.1"
bandit = "^1.8.6"
pytest = "^8.4.1"
tqdm = "^4.67.1"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mfl-props = "mfl_prop_bets.main:main"
